# Juthoor-Linguistic-Genealogy

./: .gitignore  LICENSE  README.md  pyproject.toml
Juthoor-ArabicGenome-LV1/: .gitignore  README.md  pyproject.toml  requirements-ingest.txt  requirements.txt
Juthoor-ArabicGenome-LV1/.github/workflows/: ci.yml
Juthoor-ArabicGenome-LV1/data/: README.md
Juthoor-ArabicGenome-LV1/data/processed/: README.md
Juthoor-ArabicGenome-LV1/data/theory_canon/: SCHEMA.md
Juthoor-ArabicGenome-LV1/docs/: EXPANSION_IDEAS.md  INGEST.md  PROGRESS_LOG.md  RAW_DATA_FLOW.md  START_HERE.md
Juthoor-ArabicGenome-LV1/docs/archive/: INGEST.md  PHASE3_AND_PROMOTION_PLAN.md  (+1 more)
Juthoor-ArabicGenome-LV1/outputs/: README.md
Juthoor-ArabicGenome-LV1/resources/: README.md  hypotheses.yaml
Juthoor-ArabicGenome-LV1/scripts/: build_genome_phase1.py  build_genome_phase2.py  coverage_check.py  ingest_muajam.py  semantic_validation_phase3.py  setup.ps1  smoke.ps1
Juthoor-ArabicGenome-LV1/tests/: conftest.py  test_build_articulatory_vectors.py  test_build_dashboard.py  test_canon_acceptance.py  test_canon_import.py  test_canon_loaders.py  test_canon_models.py  test_canon_phase1.py  test_canon_pipeline.py  test_canon_promotion_rules.py  test_core_loaders.py  test_core_models.py  test_coverage_check.py  test_cross_lingual_projection.py  test_cross_lingual_scoring.py  test_experiment_runner.py  test_feature_decomposition.py  test_feature_store.py  test_h10_compositionality.py  test_h9_emphatic.py  test_hypotheses_yaml.py  test_independent_letter_derivation.py  test_lv1_pipeline_integration.py  test_lv1_scoring.py  test_neili_constraints.py  test_phase1_genome.py  test_phase1_research_factory.py  test_phase2_axis1_axis5.py  test_phase2_axis4.py  test_phase2_merge.py  test_phase3_meaning_predictor.py  test_phase3_missing_and_phantom.py  test_phase3_scoring.py  test_phase3_unsupervised_discovery.py  test_position_aware_composer.py  test_promotions.py  test_qca_canon_bridge.py  test_quranic_validation.py  test_research_factory_compute_embeddings.py  test_research_factory_phonetics.py  (+7 more)
Juthoor-CognateDiscovery-LV2/: CONTRIBUTING.md  INGEST_README.md  README.md  pyproject.toml  requirements.api.txt  requirements.embeddings.txt
Juthoor-CognateDiscovery-LV2/config/: discovery.yaml  eye2_prompt_template.txt
Juthoor-CognateDiscovery-LV2/data/: README.md
Juthoor-CognateDiscovery-LV2/docs/: BENCHMARK_CORRECTIONS.md  Beyond_the_Name_Etymology_Extraction.md  CONSONANT_CORRESPONDENCE_ANALYSIS.md  DISCOVERY_PRECOMPUTE_ASSETS.md  DISCOVERY_SYNTHESIS.md  ETYMOLOGY_LINKING_METHODOLOGY.md  HOW_WORDS_LINK.md  INGEST.md  LV0_DATA_CORE.md  METHODOLOGY_V2.md  METHOD_EFFECTIVENESS_REPORT.md  NEXT_DATA_IMPROVEMENTS.md  NULL_MODEL_RESULTS.md  PHONETIC_LAWS_REFERENCE.md  PHONETIC_LAW_EVALUATION.md  PROGRESS_LOG.md  RAW_DATA_FLOW.md  README.md  RELEASE_ASSETS.md  RERANKER_V3_DESIGN.md  SIMILARITY_SCORING_SPEC.md  START_HERE.md  pipeline_specification.md
Juthoor-CognateDiscovery-LV2/outputs/: README.md  benchmark_method_analysis.json  manual_review_top50.md
Juthoor-CognateDiscovery-LV2/resources/: PHONETIC_MERGERS.md  phonetic_mergers.jsonl  phonetic_mergers_greek.jsonl  phonetic_mergers_latin.jsonl
Juthoor-CognateDiscovery-LV2/scripts/: analyze_scorer_failures.py  build_arabic_deep_glossary.py  build_arabic_profiles.py  build_discoveries_dashboard.py  build_ipa_lookup.py  build_target_etymology_glossary.py  create_benchmark_corpora.py  dedup_corpora.py  enrich_phonetic_mergers.py  extract_multilingual_pairs.py  gen_eye2_eng.py  gen_eye2_full.py  gen_layer2_semantic.py  mine_phonetic_laws.py  prepare_arabic_discovery.py  review_silver_pairs.py  run_benchmark_discovery.py  score_eye2_chunk.py  score_gemini_batch.py  tune_phonetic_threshold.py  write_methodology_doc.py
Juthoor-CognateDiscovery-LV2/src/: README.md
Juthoor-CognateDiscovery-LV2/tests/: conftest.py  test_apply_reranker.py  test_benchmark_assets.py  test_benchmark_audit.py  test_benchmark_coverage.py  test_benchmark_expansion.py  test_benchmarking.py  test_concept_matcher.py  test_correspondence.py  test_cross_pair_scorer.py  test_discovery_modules.py  test_english_mergers.py  test_evaluation.py  test_eye2_batch_scorer.py  test_genome_integration.py  test_genome_scoring.py  test_gloss_similarity.py  test_historical_english.py  test_hybrid_scoring.py  test_jsonl.py  test_lang.py  test_layer1_integration.py  test_llm_validator.py  test_materialize_benchmark_slice.py  test_multi_method_integration.py  test_multi_method_scorer.py  test_phonetic_law_scorer.py  test_phonetic_mergers.py  test_precomputed_assets.py  test_reranker_genome_feature.py  test_reranker_training.py  test_root_families.py  test_root_quality_scorer.py  test_scoring_profiles.py  test_synonym_expansion.py  test_target_morphology.py
Juthoor-DataCore-LV0/: .gitignore  README.md  ReadMe.txt  pyproject.toml
Juthoor-DataCore-LV0/docs/: PIPELINE_MODERNIZATION_REVIEW.md  PROGRESS_LOG.md  ROADMAP.md  SCHEMA_LV0_7.md  SESSION_START.md
Juthoor-DataCore-LV0/scripts/: setup_raw_links.ps1
Juthoor-DataCore-LV0/tests/: test_build_text_fields.py  test_concepts.py  test_english_ipa.py  test_hebrew_ingest.py  test_ingest_kaikki.py  test_ingest_ten_dicts.py  test_processed_schema.py  test_quran_lemmas.py
Juthoor-Origins-LV3/: CONTRIBUTING.md  Master FoundationV3.2.md  README.md  pyproject.toml
Juthoor-Origins-LV3/docs/: ANCHOR_GATES.md  ANCHOR_POLICY.md  GETTING_LV3_OUTPUTS.md  METHODOLOGY_NOTE.md  PROGRESS_LOG.md  PUBLICATION_ABSTRACT.md  RAW_DATA_FLOW.md  README.md  RESEARCH_DIRECTIONS.md  REVISED_FRAMEWORK.md  ROADMAP.md  THEORY_SYNTHESIS.md  VALIDATION_METHODOLOGY.md  VALIDATION_TRACK.md
Juthoor-Origins-LV3/scripts/: anchor_stats.py  extract_corridor_examples.py  validate_corridors.py  validate_corridors_statistical.py
Juthoor-Origins-LV3/tests/: test_ingest.py
Quran-Corpus-Analysis/: .gitignore  README.md  pyproject.toml
Quran-Corpus-Analysis/data/: README.md
Quran-Corpus-Analysis/docs/: START_HERE.md
Quran-Corpus-Analysis/outputs/: README.md
Quran-Corpus-Analysis/resources/: README.md
(+909 files in other folders)
