[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juthoor-linguistic-genealogy"
version = "0.0.0"
description = "Unified monorepo for the Juthoor linguistic genealogy levels."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
ml = [
    "faiss-cpu>=1.8,<2",
    "torch>=2.2,<3",
    "transformers>=4.45,<5",
    "sonar-space>=0.2",
    "fairseq2>=0.3",
]
all = [
    "juthoor-linguistic-genealogy[dev,ml]",
]

[tool.uv.workspace]
members = [
  "Juthoor-DataCore-LV0",
  "Juthoor-ArabicGenome-LV1",
  "Juthoor-CognateDiscovery-LV2",
  "Juthoor-Origins-LV3",
  "Quran-Corpus-Analysis",
]

[tool.uv.sources]
juthoor-datacore-lv0 = { workspace = true }
juthoor-cognatediscovery-lv2 = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = [
    "Juthoor-DataCore-LV0/src",
    "Juthoor-CognateDiscovery-LV2/src",
]
omit = ["*/tests/*", "*/__pycache__/*"]