[project]
name = "juthoor-arabicgenome-lv1"
version = "0.1.0"
description = "LV1: Arabic Genome. Decoding the root system and atomic meanings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "juthoor-datacore-lv0",
    "pandas",
    "networkx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juthoor_arabicgenome_lv1"]
