[project]
name = "juthoor-cognatediscovery-lv2"
version = "0.1.0"
description = "LV2: Cognate Discovery. Cross-lingual similarity scoring and retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "juthoor-datacore-lv0",
    "pandas>=2.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
# Core ML dependencies (cross-platform: Windows/Linux/macOS)
ml-core = [
    "faiss-cpu>=1.7,<2",
    "torch>=2.0,<3",
    "transformers>=4.40,<5",
]
# BGE-M3 semantic embeddings (cross-platform)
semantic = [
    "juthoor-cognatediscovery-lv2[ml-core]",
    "FlagEmbedding>=1.3",
]
# ByT5 form embeddings (cross-platform, uses transformers from ml-core)
form = [
    "juthoor-cognatediscovery-lv2[ml-core]",
]
# Full embeddings (cross-platform)
embeddings = [
    "juthoor-cognatediscovery-lv2[semantic,form]",
]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "juthoor-cognatediscovery-lv2[embeddings,viz,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juthoor_cognatediscovery_lv2"]

[tool.uv.sources]
juthoor-datacore-lv0 = { workspace = true }
