[project]
name = "juthoor-datacore-lv0"
version = "0.1.0"
description = "LV0: The Foundation. Data ingestion and canonization engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
]

[project.scripts]
ldc = "juthoor_datacore_lv0.cli:main"

[project.optional-dependencies]
embeddings = [
    "juthoor-cognatediscovery-lv2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juthoor_datacore_lv0"]
