[project]
name = "juthoor-origins-lv3"
version = "0.1.0"
description = "LV3: Origins. Genealogical mapping and theory synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "juthoor-arabicgenome-lv1",
    "juthoor-cognatediscovery-lv2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juthoor_origins_lv3"]
