[project]
name = "quran-corpus-analysis"
version = "0.1.0"
description = "Quranic semantic analysis and decoding application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "juthoor-datacore-lv0",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quran_corpus_analysis"]
