[project]
name = "quran-corpus-analysis"
version = "0.1.0"
description = "Quranic semantic analysis and decoding application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quran_corpus_analysis"]
